clusters/main/kubernetes/apps/silverbullet/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: silverbullet
  labels:
    app.kubernetes.io/name: silverbullet
