clusters/main/kubernetes/apps/silverbullet/app/gateway-api-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: silverbullet
  namespace: silverbullet
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - silverbullet.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: silverbullet
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: silverbullet-http-redirect
  namespace: silverbullet
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
  hostnames:
    - silverbullet.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
